2005-04-01 Philippe April <philippe@ilesansfil.org>
	* Fixed missing parenthesis in classes/User.php
	* Removed unused files
	* fixed schema_validate.php (typos)

2005-04-01 Francois Proulx  <francois.proulx@gmail.com>
	* EVERYTHING IS NOW UTF-8 YOU MUST EDIT YOUR FILES WITH AN UTF-8 COMPLIANT EDITOR
	* The database will be converted to UTF-8 (version 5)
	* Added select boxes ( or hidden ) html form elements to choose the network for signup, lost password, username
	
2005-04-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add constraints to account_origin to detect errors on inserts.
	* Remove IDRC test server

2005-04-01 Philippe April <philippe@ilesansfil.org>
	* User.php: Add reference to $db global variable.
	* Tagged v0_1_0_alpha1
	* Removed spaces in AuthenticatorLocalUser.php
	
2005-03-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* Remove spaces after php blocks in various files.
	* Temporarily fix single authentication source not present bug in login smarty template.  All other places where we select the network will be fixed tommorow.
	* Fix initial schema errors.
	
2005-03-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* More RADIUS install documentation.
	* Fix schema_validate.php
	
2005-03-31 Francois Proulx  <francois.proulx@gmail.com>
 	* Moved language definition 
 	* Moved e-mail subjects to User class ( each e-mail functions )
 	
2005-03-31 Francois Proulx  <francois.proulx@gmail.com>
 	* Added missing schema_validate.php modifs.

2005-03-31 Francois Proulx  <francois.proulx@gmail.com>
	* Added PEAR install procedure
	
2005-03-30 François Proulx  <francois.proulx@gmail.com>
	* Finished RADIUS authentication and accounting
	* Accounting Unique session ID is now based on the same token we use
	* Fixed all issues with lost_username, lost_password etc...
	* User class has new static function getUsersByEmail and getUsersByUsername
	* Added translations for new features
	* Translated the validation, lost password, username e-mails